# CDE2310TurtlebotLocal

./: README.md
amg8833_sensor/: .setup.py.swp  CMakeLists.txt  package.xml  setup.py
amg8833_sensor/scripts/: amg8833_publisher.py
install/: setup.sh
install/dwb_msgs/share/dwb_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav2_simple_commander/share/nav2_simple_commander/: assisted_teleop_example_launch.py  follow_path_example_launch.py  inspection_demo_launch.py  nav_through_poses_example_launch.py  nav_to_pose_example_launch.py  package.sh  package.xml  picking_demo_launch.py  recoveries_example_launch.py  security_demo_launch.py  warehouse.world  waypoint_follower_example_launch.py
install/nav2_util/include/nav2_util/: clear_entirely_costmap_service_client.hpp  costmap.hpp  execution_timer.hpp  geometry_utils.hpp  lifecycle_node.hpp  lifecycle_service_client.hpp  lifecycle_utils.hpp  line_iterator.hpp  node_thread.hpp  node_utils.hpp  occ_grid_values.hpp  odometry_utils.hpp  robot_utils.hpp  service_client.hpp  simple_action_server.hpp  string_utils.hpp  validate_messages.hpp
install/nav2_util/lib/nav2_util/: lifecycle_bringup
install/nav2_util/share/nav2_util/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav2_voxel_grid/include/nav2_voxel_grid/: voxel_grid.hpp
install/nav2_voxel_grid/share/nav2_voxel_grid/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav_2d_msgs/share/nav_2d_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
navigation2/nav2_bringup/params/: nav2_params.yaml
turtlebot3/install/: local_setup.sh  setup.sh
turtlebot3/log/: latest_build
turtlebot3/my_new_node/: CMakeLists.txt  package.xml
turtlebot3/my_new_node/install/: local_setup.sh  setup.sh
turtlebot3/my_new_node/install/my_new_node/share/my_new_node/: package.bash  package.zsh
turtlebot3/my_new_node/log/: latest_build
turtlebot3/my_new_node/src/: my_new_node.cpp
turtlebot3/turtlebot3_bringup/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_bringup/config/: nav2_params.yaml
turtlebot3/turtlebot3_bringup/launch/: robot.launch.py
turtlebot3/turtlebot3_flywheels_and_temp/: package.xml  setup.py
turtlebot3/turtlebot3_flywheels_and_temp/amg8833_sensor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3/turtlebot3_flywheels_and_temp/amg8833_sensor/scripts/: amg8833_publisher.py
turtlebot3/turtlebot3_flywheels_and_temp/launch/: bringup.launch.py  flywheels_and_temperature_bringup.py
turtlebot3/turtlebot3_flywheels_and_temp/src/nodes/: flywheel_node.py  pwm_cli_publisher.py  temperature_node.py
turtlebot3/turtlebot3_flywheels_and_temp/turtlebot3_flywheels_and_temp/: flywheel_node.py  flywheels_and_temperature_bringup.py
(+376 files in other folders)
