<package format="3">
  <name>amg8833_sensor</name>
  <version>0.0.1</version>
  <description>AMG8833 ROS 2 publisher</description>
  <maintainer email="raamanathan2002@gmail.com">nathan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

