<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_flywheels_and_temp</name>
  <version>0.0.0</version>
  <description>Temperature reading using AMG8833 sensor</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
